fix end modal spacing with Bootstrap grid

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,10 @@ input[type='textarea'] {
     border: none;
 }
 
+.modal-body {
+    padding: 0;
+}
+
 .modal-content {
     background-color: #1b2838;
 }
